manifests/calculator-app/lambda-addition-operator/addition-operator-external-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "addition-operator"
  namespace: "team-addition-operator"
  labels:
    app: "addition-operator"
    environment: "preprod"
spec:
  type: ExternalName
  externalName: XXXXXXXXXX.execute-api.us-west-2.amazonaws.com
